Updated CaseFiles Content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -202,39 +202,36 @@ import PatientCaseFilesWrapper from "../components/Case-Files/PatientCaseFilesWr
     >
       <Fragment slot="medical">
         <ul>
-          <li class="item">
-            2 nontraumatic fractures: Age 13, femur; age 16, metatarsals
-          </li>
-          <li class="item">
-            Reportsof slow healing fractures, even at young age
-          </li>
-          <li class="item">Age 50: Kidney stones</li>
-          <li class="item">History of poor dentition and weak/loose teeth</li>
-          <li class="item">
-            Recent diagnosis ofpseudogout/CPPD/chondrocalcinosis
-          </li>
+          <li class="item">Born prematurely at 32 weeks</li>
+          <li class="item">History of developmental delays</li>
+          <li class="item">Early loss of baby teeth with root intact</li>
+          <li class="item">Delayed eruption of permanent teeth</li>
+          <li class="item">General short stature</li>
+          <li class="item">GHistory of lower extremity weakness</li>
         </ul>
       </Fragment>
       <Fragment slot="family">
         <ul>
-          <li class="item">Mother: Osteoporosis</li>
-          <li class="item">
-            Father: Hypertension, myocardial infarction at 67
-          </li>
+          <li class="item">Mother of <strong>Hannah</strong></li>
+          <li class="item">Mother: Osteoporosis diagnosis in her early 50s</li>
         </ul>
       </Fragment>
       <Fragment slot="symptoms">
         <ul>
-          <li class="item">Bone pain in back and thighs</li>
-          <li class="item">Chronic fatigue</li>
-          <li class="item">Current nontraumatic hairline fracture</li>
-          <li class="item">Reports of anxiety and depressed mood</li>
+          <li class="item">Chronic bone and joint pain, myalgia</li>
+          <li class="item">Morning stiffness</li>
+          <li class="item">
+            Symptoms worse in the morning and in cold weather
+          </li>
+          <li class="item">Reports of frequent headaches and depressed mood</li>
         </ul>
       </Fragment>
       <Fragment slot="medications">
         <ul>
-          <li class="item">Calcium and vitamin D supplement daily</li>
-          <li class="item">Reports of daily NSAID use</li>
+          <li class="item">Daily NSAID taken to address chronic pain</li>
+          <li class="item">
+            Hydrocodone taken as needed for severe pain episodes
+          </li>
         </ul>
       </Fragment>
       <Fragment slot="results">
@@ -251,21 +248,21 @@ import PatientCaseFilesWrapper from "../components/Case-Files/PatientCaseFilesWr
 
           <div class="second-column">
             <h3>RESULT</h3>
-            <p>10.6</p>
-            <p>6.5</p>
-            <p>4.6</p>
-            <p>63</p>
+            <p>9.9</p>
+            <p>7.1</p>
+            <p>4.1</p>
+            <p>34</p>
           </div>
 
           <div class="second-column last-child">
             <h3>FLAG</h3>
-            <p>High</p>
+            <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
             <p>&nbsp;</p>
           </div>
         </div>
-        <h5>6 months ago</h5>
+        <h5>3 months ago</h5>
         <div class="acc-table">
           <div class="first-column">
             <h3>TEST</h3>
@@ -277,33 +274,9 @@ import PatientCaseFilesWrapper from "../components/Case-Files/PatientCaseFilesWr
           <div class="second-column">
             <h3>RESULT</h3>
             <p>9.8</p>
-            <p>6.9</p>
-            <p>3.9</p>
-            <p>35</p>
-          </div>
-          <div class="second-column last-child">
-            <h3>FLAG</h3>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-          </div>
-        </div>
-        <h5>1 year ago</h5>
-        <div class="acc-table">
-          <div class="first-column">
-            <h3>TEST</h3>
-            <p>Calcium, mg/dL</p>
-            <p>Protein, g/dL</p>
-            <p>Albumin, g/dL</p>
-            <p>Alkaline phosphatase, IU/L</p>
-          </div>
-          <div class="second-column">
-            <h3>RESULT</h3>
-            <p>10.2</p>
-            <p>7.1</p>
-            <p>4.0</p>
-            <p>32</p>
+            <p>7.5</p>
+            <p>4.2</p>
+            <p>19</p>
           </div>
           <div class="second-column last-child">
             <h3>FLAG</h3>
@@ -314,61 +287,47 @@ import PatientCaseFilesWrapper from "../components/Case-Files/PatientCaseFilesWr
           </div>
         </div>
         <ul>
-          <li class="item">High vitamin B6 level shown at test 6 months ago</li>
           <li class="item">
-            ALPL genetic test: Variant of uncertain significance (VUS)
-            identified
+            ALPL genetic test: Autosomal recessive inheritance
           </li>
         </ul>
-        <PinchToZoom id="pt-1-image-1">
+        <PinchToZoom id="pt-2-image-1">
           <picture>
             <source
-              srcset="/assets/images/case-files/nathan/Femur-fracture-age-13.png"
+              srcset="/assets/images/case-files/anna/Delayed-eruption-of-permanent-teeth.png"
               media="(min-width: 768px)"
             />
             <img
-              src="/assets/images/case-files/nathan/Femur-fracture-age-13.png"
+              src="/assets/images/case-files/anna/Delayed-eruption-of-permanent-teeth.png"
               alt=""
             />
           </picture>
           <div class="patient">
-            <p>Femur fracture age 13</p>
+            <p>Delayed eruption of permanent teeth</p>
           </div>
         </PinchToZoom>
-        <PinchToZoom id="pt-1-image-2">
+        <PinchToZoom id="pt-2-image-2">
           <picture>
             <source
-              srcset="/assets/images/case-files/nathan/Metatarsal-fracture-age-16.png"
+              srcset="/assets/images/case-files/anna/Early-loss-of-baby-teeth.png"
               media="(min-width: 768px)"
             />
             <img
-              src="/assets/images/case-files/nathan/Metatarsal-fracture-age-16.png"
+              src="/assets/images/case-files/anna/Early-loss-of-baby-teeth.png"
               alt=""
             />
           </picture>
           <div class="patient">
-            <p>Metatarsal fracture age 16</p>
-          </div>
-        </PinchToZoom>
-        <PinchToZoom id="pt-1-image-3">
-          <picture>
-            <source
-              srcset="/assets/images/case-files/nathan/Tibial-fracture-age-57.png"
-              media="(min-width: 768px)"
-            />
-            <img
-              src="/assets/images/case-files/nathan/Tibial-fracture-age-57.png"
-              alt=""
-            />
-          </picture>
-          <div class="patient">
-            <p>Tibial fracture age 57</p>
+            <p>Early loss of baby teeth with root intact</p>
           </div>
         </PinchToZoom>
       </Fragment>
       <Fragment slot="notes">
         <ul>
-          <li class="item">N/A</li>
+          <li class="item">
+            Patient has an executed “pain contract” with physician's office due
+            to history of opioid use
+          </li>
         </ul>
       </Fragment>
     </PatientCaseFile>
@@ -554,11 +513,11 @@ import PatientCaseFilesWrapper from "../components/Case-Files/PatientCaseFilesWr
     </PatientCaseFile>
     <PatientCaseFile
       id="4"
-      name="Nathan"
-      age={57}
-      gender="M"
-      description="A 57-year-old male has gone undiagnosed for 30+ years. Does Nathan’s file remind you of any of your current patients?"
-      photo="/assets/images/case-files/nathan/nathan.png"
+      name="Sarah"
+      age="7 mo"
+      gender="F"
+      description="A 7-month-old female with vitamin B-responsive seizures at birth. Does Sarah’s file remind you of any of your current patients?"
+      photo="/assets/images/case-files/sarah/sarah.png"
     >
       <Fragment slot="medical">
         <ul>
