Update Patient Case File Information

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -514,7 +514,7 @@ import PatientCaseFilesWrapper from "../components/Case-Files/PatientCaseFilesWr
     <PatientCaseFile
       id="4"
       name="Sarah"
-      age="7 mo"
+      age="7 months"
       gender="F"
       description="A 7-month-old female with vitamin B-responsive seizures at birth. Does Sarah’s file remind you of any of your current patients?"
       photo="/assets/images/case-files/sarah/sarah.png"
