Update Layout & JS Functionality

--- a/src/components/Case-Files/PatientCaseFilesWrapper.astro
+++ b/src/components/Case-Files/PatientCaseFilesWrapper.astro
@@ -7,13 +7,17 @@ const {} = Astro.props;
   <div class="wrapper">
     <h3 class="patients__heading">Patient case file</h3>
     <form class="form">
-      <select class="form__select" name="patient" id="patient-dropdown"
-      ></select>
+      <div class="form__select">
+        <select name="patient" id="patient-dropdown"></select>
+      </div>
     </form>
     <div id="patient__case_files" class="patient__case_files">
       <slot />
     </div>
     <ul class="patients_dots_list"></ul>
+    <p class="profiles__text">
+      Profiles are based on hypothetical patient cases.
+    </p>
   </div>
 </div>
 
@@ -25,14 +29,12 @@ const {} = Astro.props;
     patientCaseFiles.forEach((patient) => {
       const patientName = patient.querySelector(".patient__name").innerHTML;
       const patientAge = patient.querySelector(".patient__age").innerHTML;
-      const patientID = patient.id.toString();
+      const patientID = patient.id.replace("patient-id-", "");
       const selected = Number(patientID) === 1 ? "selected" : "";
       const activeDot = selected ? "active" : "";
-      patientSelect.innerHTML += `<option ${selected} value="${patientID}">${patientName} - ${patientAge}</option>`;
+      patientSelect.innerHTML += `<option ${selected} value="${patientID}">${patientName}, ${patientAge}</option>`;
       patientDotList.innerHTML += `<li class="patients_dots_list__item ${activeDot}">
-        <button class="patients_dots_list__button button" type="button" data-patient="${patientID}">
-          -  
-        </button>
+        <button class="patients_dots_list__button button" type="button" data-patient="${patientID}"></button>
         </li>`;
     });
   }
@@ -42,7 +44,34 @@ const {} = Astro.props;
       patientCaseFile?.classList.remove("active");
     });
     const selectedValue = (e.target as HTMLInputElement).value;
-    const patientCaseFile = document.querySelector(`#${selectedValue}`);
+    const patientCaseFile = document.querySelector(
+      `#patient-id-${selectedValue}`
+    );
     patientCaseFile?.classList.add("active");
   });
+
+  const patientDots = document.querySelectorAll(".patients_dots_list__button");
+  patientDots?.forEach((dot) => {
+    dot.addEventListener("click", (e: Event) => {
+      patientDots.forEach((dot) => {
+        dot?.parentElement?.classList.remove("active");
+      });
+      const patientID = (e.target as HTMLInputElement).dataset.patient;
+      // set patient dropdown value
+      patientSelect.value = patientID;
+      patientSelect.dispatchEvent(new Event("change"));
+      scrollToPatient();
+    });
+  });
+
+  function scrollToPatient() {
+    const patientsSection = document.querySelector(".patients");
+    if (patientsSection) {
+      patientsSection.scrollIntoView({
+        behavior: "smooth",
+        block: "start",
+        inline: "nearest",
+      });
+    }
+  }
 </script>
