stay connected modal created

--- a/src/components/Navigation/HeaderSecondaryNavigation.astro
+++ b/src/components/Navigation/HeaderSecondaryNavigation.astro
@@ -2,7 +2,7 @@
   <nav class="site__navigation">
     <ul class="secondary__navigation nav__menu">
       <li class="nav__menu_item">
-        <a href="#" class="nav__menu_item_link">Stay Connected</a>
+        <a  class="nav__menu_item_link connected-modal">Stay Connected</a>
       </li>
       <li class="nav__menu_item">
         <a
