--- a/src/pages/design.astro
+++ b/src/pages/design.astro
@@ -2,6 +2,7 @@
 import Accordion from "../components/Accordion.astro";
 import Layout from "../layouts/Layout.astro";
 import CTA from "../components/CTA.astro";
+import Form from "../components/Form.astro";
 import "../styles/settings/_design.scss";
 ---
 
@@ -411,4 +412,5 @@ import "../styles/settings/_design.scss";
       
       </div>  
   </section>
+  
 </Layout>
