--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,6 +24,7 @@
 @import './components/references';
 @import './components/detective-form';
 @import './components/cta';
+@import './components/stay-connected';
 
 
 .section__home-video {
