--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import CaseFile from "../components/CaseFile.astro";
 import MainHero from "../components/MainHero.astro";
 import ALPDVideo from "../components/ALPDVideo.astro";
-import References from "../components/References.astro";
-import CTA from "../components/CTA.astro";
+import StayConnected from "../components/stay-conected.astro";
 ---
 
 <Layout title="Welcome" showHeader={true} showISI={false}>
@@ -56,5 +55,5 @@ import CTA from "../components/CTA.astro";
 
     <div class="red-string"></div>
   </section>
-  
+<StayConnected />  
 </Layout>
