--- a/src/components/Case-Files/PatientCaseFilesWrapper.astro
+++ b/src/components/Case-Files/PatientCaseFilesWrapper.astro
@@ -56,6 +56,7 @@ const {} = Astro.props;
       patientDots.forEach((dot) => {
         dot?.parentElement?.classList.remove("active");
       });
+      dot?.parentElement?.classList.add("active");
       const patientID = (e.target as HTMLInputElement).dataset.patient;
       // set patient dropdown value
       patientSelect.value = patientID;
