--- a/src/components/Pinch-to-zoom.astro
+++ b/src/components/Pinch-to-zoom.astro
@@ -6,13 +6,13 @@ const { id } = Astro.props;
 ---
 
 <div class="pinch-to-zoom f-panzoom" id={id}>
-  <button
-    data-panzoom-action="zoomToFull"
-    data-content-id={id}
-    class="button button--pich-to-zoom"></button>
   <button class="pinch-to-zoom__close-modal" style="display: none">×</button>
   <div class="pinch-to-zoom__container f-panzoom__viewport">
     <div class="f-panzoom__content">
+      <button
+        data-panzoom-action="zoomToFull"
+        data-content-id={id}
+        class="button button--pinch-to-zoom"></button>
       <slot />
     </div>
   </div>
