--- a/src/styles/components/_pinch-to-zoom.scss
+++ b/src/styles/components/_pinch-to-zoom.scss
@@ -8,6 +8,26 @@
     background-color: rgba(3, 3, 3, 0.8);
   }
 
+  .button--pinch-to-zoom {
+    position: relative;
+    background-color: $color-smoky-black;
+    border-radius: 0;
+    height: 43px;
+    width: 45px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 8px;
+      left: 9px;
+      background-image: url('/assets/icons/pinch-to-zoom-button-image.svg');
+      background-repeat: no-repeat;
+      background-size: 100%;
+      height: 28px;
+      width: 28px;
+    }
+  }
+
 
   .pinch-to-zoom__close-modal {
     position: absolute;
