--- a/src/styles/components/_patient-case-file.scss
+++ b/src/styles/components/_patient-case-file.scss
@@ -1,3 +1,31 @@
+.patients {
+  position: relative;
+  background-color: $color-white;
+  padding-bottom: 2rem;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/assets/images/case-files/patient-case-file-bg.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 1;
+
+    @media screen and (min-width: 600px) {
+      background-image: url('/assets/images/case-files/patient-case-file-bg-2x.png');
+    }
+  }
+
+  .wrapper {
+    position: relative;
+    z-index: 2;
+  }
+}
+
 .patients__heading {
   font-family: 'Veneer';
   font-style: normal;
@@ -15,7 +43,7 @@
   font-size: .875rem;
   line-height: 1.3125rem;
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .patient__case_files {
@@ -24,7 +52,6 @@
 }
 
 .patients__case_file_item {
-  background-color: $color-white;
 
   .patient__case {
     display: none;
@@ -73,9 +100,9 @@
 
       .profile__pic {
         position: relative;
-        top: -25px;
-        left: -20px;
-        width: 262px;
+        top: -35px;
+        left: 5px;
+        width: 191px;
       }
 
       .profile__finger_print {
@@ -104,7 +131,7 @@
         height: 100%;
       }
 
-      .with--border {
+      .grid_info_age {
         border-right: 1px solid $color-black;
         border-left: 1px solid $color-black;
       }
@@ -116,6 +143,12 @@
         font-size: 1.25rem;
         line-height: 1.875rem;
         color: $color-carbon;
+
+        @media screen and (min-width: 768px) and (max-width: 1023px) {
+          font-size: 1.75rem;
+          line-height: 3rem;
+        }
+
       }
 
       .patient__age,
